syntax = "proto3";

package cloud.lazycat.apis;

option go_package = "/devices";

import "google/protobuf/empty.proto";

service Devices {
  rpc ListDevices(ListDeviceRequest) returns (ListDeviceReply) {}

  // 让当前hclient保持/打开与其他hclient的虚拟网络隧道
  rpc KeepConnect(stream KeepConnectRequest) returns (google.protobuf.Empty) {}
}


message KeepConnectRequest {
  string source_device = 1;

  // true表示建立连接、false表示断开连接
  bool open = 2;

  repeated string devices = 3;
}

message Device {
  string peer_id = 1;
  bool is_online = 2;

  // 因为device api的监听端口可能会变化，所以此url有效性不会太长
  string device_api_url = 3;
}
message ListDeviceRequest {
  string uid = 1;
}
message ListDeviceReply {
  repeated Device devices = 1;
}